--- a/competence.html
+++ b/competence.html
@@ -18,7 +18,9 @@
         <li><a href="diplomes.html">Diplomes</a></li>
         <li><a href="competence.html">Competence</a></li>
         <li><a href="stage.html">Stage</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
       </ul>
     </nav>
     <div  style="display: flex; align-items: flex-start;margin-top: 10%;" >
@@ -31,7 +33,7 @@
             <li><h3>Sql</h3></li>
         </ul>
         </div>
-        <div style="margin-left: 20%;">
+        <div style="margin-right: 10%;">
         <h1>Les environnements de developpement:</h1>
           <ul>
             <li><h3>VScode</h3></li>
