--- a/diplomes.html
+++ b/diplomes.html
@@ -18,7 +18,9 @@
         <li><a href="diplomes.html">Diplomes</a></li>
         <li><a href="competence.html">Competence</a></li>
         <li><a href="stage.html">Stage</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
       </ul>
     </nav>
     <div class="content">
@@ -28,12 +30,12 @@
       
       <p style="display: flex; align-items: flex-start;">
         <img src="dip_b.jpg" alt="" height="100" width="200" style="margin-right: 10px;">
-        <span>Diplome baccalauréat de technique obtenu au lycée 9 Avril en 2020 avec mention bien</span>
+        <span>Hight diplome of tech obtained in <br>lycée 9 Avril in the year 2020 </span>
       </p>
       <br>
       <p style="display: flex; align-items: flex-start;">
         <img src="dip_e.png" alt="" height="100" width="200" style="margin-right: 10px;">
-        <span>Diplome de technicien superieur en informatique industrielle obtenu au ISGIS en 2023 <br> avec mention bien</span>
+        <span>Diplome of technicien superieur en<br> informatique industrielle obtain in<br>ISGIS in 2023 </span>
       </p>
     </div>
   </div>
