--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     </nav>
     <div class="content">
       <h2>Ahmed Chakchouk</h2>
-      <p>I'm A Web Developer & Designer. I Will Make Your Project Beautiful And Attractive,<br>You Can Find Me On GitHub.</p>
+      <p>As a skilled Web Developer and Designer, I craft visually stunning and user friendly websites that bring your projects
+         to life. Let me make your vision stand out with a modern, captivating design. Explore my work on GitHub.</p>
     </div>
-    <div class="link">
+    <div class="link" style="margin-top: 17%;">
       <a href="https://www.facebook.com/" class="hire">Facebook</a>
       <a href="https://www.instagram.com/" class="hire">Instagram</a>
       <a href="https://www.linkedin.com/" class="hire">Linkedin</a>
