--- a/project.html
+++ b/project.html
@@ -18,11 +18,13 @@
         <li><a href="diplomes.html">Diplomes</a></li>
         <li><a href="competence.html">Competence</a></li>
         <li><a href="stage.html">Stage</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
       </ul>
     </nav>
     <div >
-      <p style="max-width: 30% ;margin-top: 10%;font-size: 25px;" >
+      <p style="max-width: 25% ;margin-top: 5%;font-size: 25px;" >
         
         
           a smart scale 
