--- a/stage.html
+++ b/stage.html
@@ -18,7 +18,9 @@
         <li><a href="diplomes.html">Diplomes</a></li>
         <li><a href="competence.html">Competence</a></li>
         <li><a href="stage.html">Stage</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
       </ul>
     </nav>
     <div >
